# CubicExpansion

./: CMakeLists.txt  Creature.h  CubeWorldRescaled.cpp  CubicExpansion.cpp  CubicExpansion.h  Field.h  InventoryWidget.h  README.md  Zone.h  cube.h  non_cube.h  plasma.h  scale_functions.h
Hooks/: __OnAddingPotionCraftKnowledge.h  __OnCanCreatureEquipItem.h  __OnCharacterWidgetRatingsUpdate.h  __OnGetCoinAmount.h  __OnGetConsumableItemHealth.h  __OnGetCreatureArmor.h  __OnGetCreatureDamage.h  __OnGetCreatureMaxHealth.h  __OnGetCreaturePower.h  __OnGetCreatureResistance.h  __OnGetItemArmor.h  __OnGetItemCoinValue.h  __OnGetItemDamage.h  __OnGetItemHealth.h  __OnGetItemPower.h  __OnGetItemRegeneration.h  __OnGetItemResistance.h  __OnInventoryWidgetTabUpdate.h  __OnRessourceCreatureGetItemDrop.h  __OnSetCraftItemCraftingComponents.h  __OnTemporaryFunctionDebug.h  __OnUpdateCraftingInventoryItems.h
Hooks/CreatureSkills/: __OnGetCreatureM1SkillId.h  __OnGetCreatureM2SkillId.h
plasma/: Node.h  Object.h  Widget.h
